# img-compare-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/compare/: aspect_ratio.rs  compare.rs  disk.rs  in_memory.rs  mod.rs  process.rs  run.rs
src/list/: mod.rs
test/images/: photo-1721332155433-3a4b5446bcd9.avif  photo-1731330269319-0f053cd5d74b.avif
test/images/random-collection/: premium_photo-1712171314766-4087f2e84711.avif
