[package]
name = "img-compare"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
image = { version = "0.25.5", features = ["avif-native"] }
image-compare = "0.4.1"
indicatif = { version = "0.17.9" }
md5 = "0.7.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.135"
